# hpipy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  changes.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg
.github/workflows/: build.yml  github-pages.yml  publish.yml
_modules/: index.html
_modules/hpipy/: period_table.html  price_index.html  price_model.html  time_matrix.html  trans_data.html
_modules/hpipy/datasets/: _base.html
_sources/: changes.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/api/: datasets.rst.txt  period_table.rst.txt  price_index.rst.txt  price_model.rst.txt  time_matrix.rst.txt
_sources/installation/: developers.rst.txt
_sources/quick_start/: available_methods.rst.txt  data_format.rst.txt  next_steps.rst.txt  quick_start.rst.txt
_sources/releases/: changes.rst.txt
_sources/user_guide/: accuracy_metrics.rst.txt  comparative_analysis.rst.txt  evaluation_metrics.rst.txt  hedonic_pricing.rst.txt  index.rst.txt  neural_network.rst.txt  random_forest.rst.txt  repeat_sales.rst.txt  revision_metrics.rst.txt  series_metrics.rst.txt  time_window_analysis.rst.txt  volatility_metrics.rst.txt
api/: datasets.html  index.html  metrics.html  period_table.html  plotting.html  price_index.html  price_model.html  time_matrix.html  transaction_data.html
api/_autosummary/: hpipy.datasets.load_ex_sales.html  hpipy.datasets.load_seattle_sales.html  hpipy.extensions.NeuralNetworkIndex.__init__.html  hpipy.extensions.NeuralNetworkIndex.accuracy.html  hpipy.extensions.NeuralNetworkIndex.accuracy_smooth.html  hpipy.extensions.NeuralNetworkIndex.coef_to_index.html  hpipy.extensions.NeuralNetworkIndex.create_index.html  hpipy.extensions.NeuralNetworkIndex.create_series.html  hpipy.extensions.NeuralNetworkIndex.data.html  hpipy.extensions.NeuralNetworkIndex.from_model.html  hpipy.extensions.NeuralNetworkIndex.get_data.html  hpipy.extensions.NeuralNetworkIndex.get_model.html  hpipy.extensions.NeuralNetworkIndex.html  hpipy.extensions.NeuralNetworkIndex.imputed.html  hpipy.extensions.NeuralNetworkIndex.index.html  hpipy.extensions.NeuralNetworkIndex.model.html  hpipy.extensions.NeuralNetworkIndex.name.html  hpipy.extensions.NeuralNetworkIndex.periods.html  hpipy.extensions.NeuralNetworkIndex.revision.html  hpipy.extensions.NeuralNetworkIndex.revision_smooth.html  hpipy.extensions.NeuralNetworkIndex.smooth.html  hpipy.extensions.NeuralNetworkIndex.smooth_index.html  hpipy.extensions.NeuralNetworkIndex.smooth_series.html  hpipy.extensions.NeuralNetworkIndex.value.html  hpipy.extensions.NeuralNetworkIndex.volatility.html  hpipy.extensions.NeuralNetworkIndex.volatility_smooth.html  hpipy.extensions.NeuralNetworkModel.__init__.html  hpipy.extensions.NeuralNetworkModel.base_price.html  hpipy.extensions.NeuralNetworkModel.coefficients.html  hpipy.extensions.NeuralNetworkModel.fit.html  hpipy.extensions.NeuralNetworkModel.html  hpipy.extensions.NeuralNetworkModel.model_obj.html  hpipy.extensions.NeuralNetworkModel.params.html  hpipy.extensions.NeuralNetworkModel.periods.html  hpipy.extensions.RandomForestIndex.__init__.html  hpipy.extensions.RandomForestIndex.accuracy.html  hpipy.extensions.RandomForestIndex.accuracy_smooth.html  hpipy.extensions.RandomForestIndex.coef_to_index.html  hpipy.extensions.RandomForestIndex.create_index.html  hpipy.extensions.RandomForestIndex.create_series.html  (+121 more)
docs/: Makefile  sphinx_requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst
docs/source/api/: index.rst  (+4 more)
docs/sphinxext/: directives.py
getting_started/: installation.html  quickstart.html
hpipy/: __init__.py  period_table.py  price_index.py  price_model.py  time_matrix.py  trans_data.py
hpipy/datasets/: __init__.py  _base.py
hpipy/extensions/: __init__.py
hpipy/tests/: conftest.py  test_hpipy.py  test_period_table.py  test_price_index.py  test_price_model.py  test_smooth_index.py  test_time_matrix.py  test_trans_data.py
hpipy/utils/: metrics.py  plotting.py  stineman_interpolation.py
installation/: developers.html  installation.html
notebooks/: _exp1-interpretable.ipynb  _exp2-neural-index.ipynb  _exp3-graph-neural-index.ipynb  introduction.ipynb  nn-hpi-exp-submarkets-global.ipynb  nn-hpi-exp.ipynb
quick_start/: available_methods.html  data_format.html  next_steps.html  quick_start.html
releases/: changes.html
user_guide/: accuracy_metrics.html  comparative_analysis.html  evaluation_metrics.html  hedonic_pricing.html  index.html  neural_network.html  random_forest.html  repeat_sales.html  revision_metrics.html  series_metrics.html  time_window_analysis.html  volatility_metrics.html
(+206 files in other folders)
