[tool.poetry]
name = "hpipy"
version = "0.1.0"
description = "House Price Indices with Python"
authors = ["Reid Johnson <reid.johnson@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0"
altair = "^5.2.0"
captum = "^0.7.0"
h3 = "^4.0.0b2"
numpy = {version = "^1.26.4", python="^3.9,<3.13"}
pandas = "^2.2.1"
quantile-forest = "^1.3.4"
scikit-learn = "^1.4.1"
scipy = {version = "^1.12.0", python="^3.9,<3.13"}
statsmodels = "^0.14.1"
torch = "~2.1.2"
torch_cluster = "^1.6.3"
torch_geometric = "^2.5.0"
torch_scatter = "^2.1.2"
torch_sparse = "^0.6.18"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
