[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpipy"
dynamic = ["version"]
description = "House Price Indices with Python"
authors = [
    { name = "Reid Johnson", email = "reid.johnson@gmail.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "altair>=5.5.0",
    "captum>=0.8.0",
    "h3>=4.2.1",
    "numpy>=1.26.4; python_version < '3.13'",
    "pandas>=2.2.3",
    "quantile-forest>=1.4.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "torch~=2.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["hpipy"] } }

[tool.setuptools.dynamic]
version = { file = "hpipy/version.txt" }

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true
