[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpipy"
dynamic = ["version"]
description = "House Price Indices in Python."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "Reid Johnson", email = "reid.johnson@gmail.com" }
]
maintainers = [
    { name = "Reid Johnson", email = "reid.johnson@gmail.com" }
]

keywords = ["house prices", "real estate", "index", "machine learning", "regression"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

dependencies = [
    "altair~=5.5.0",
    "captum~=0.8.0",
    "h3~=4.2.1",
    "numpy~=1.26.4; python_version < '3.13'",
    "pandas~=2.2.3",
    "quantile-forest~=1.4.0",
    "scikit-learn~=1.6.1",
    "scipy~=1.15.2",
    "statsmodels~=0.14.4",
    "torch~=2.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
    "types-python-dateutil>=2.9.0.post0",
]

[project.urls]
"Homepage" = "https://github.com/reidjohnson/hpipy"
"Repository" = "https://github.com/reidjohnson/hpipy"
"Documentation" = "https://reidjohnson.github.io/hpipy"
"Bug Tracker" = "https://github.com/reidjohnson/hpipy/issues"

[tool.setuptools]
packages = { find = { where = ["."], include = ["hpipy*"] } }

[tool.setuptools.dynamic]
version = { file = "hpipy/version.txt" }

[tool.setuptools.package-data]
"hpipy.datasets.data" = ["*.csv"]

[tool.coverage.run]
source = ["hpipy"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
exclude = "^hpipy/tests/"
ignore_missing_imports = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "TID", "UP"]
